# orion-app

./: package-lock.json  package.json
src/: App.vue  main.ts  styles.css
src-tauri/: .env  Cargo.toml  build.rs  tauri.conf.json
src-tauri/migrations/: 20230310054510_vocabulary.down.sql  20230310054510_vocabulary.up.sql  20230317020228_learn_word.down.sql  20230317020228_learn_word.up.sql  20230321082425_word_list.down.sql  20230321082425_word_list.up.sql  20230322022946_word.down.sql  20230322022946_word.up.sql  20230322024951_story.down.sql  20230322024951_story.up.sql  20230325091552_dialog.down.sql  20230325091552_dialog.up.sql
src-tauri/protos/: orion.proto
src-tauri/src/: main.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/model/: dialog.rs  learn_word.rs  mod.rs  vocabulary.rs  word_list.rs
src-tauri/src/model/data_scaffold/: dialog.rs  learn_word.rs  mod.rs  vocabulary.rs  word_list.rs
src-tauri/src/service/: mod.rs
src-tauri/src/utils/: mod.rs
src/components/: Dialogue.vue  Home.vue  InputBox.vue  ListenSpoken.vue  Story.vue  Word.vue  WordList.vue
src/router/: index.ts
src/store/: index.ts  word.ts
src/utils/: index.ts
